# traffic-counter

./: count-example.py  counter.py  pyproject.toml
runs/detect/train/: args.yaml  results.csv
runs/detect/train2/: args.yaml  results.csv
